[package]
edition = "2021"
name = "conbee2-exporter"
version = "0.1.0"

[dependencies]
env_logger = "0.9"
lazy_static = "1.4.0"
log = "0.4"
prometheus = "0.13.0"
# TODO: Revisit features of reqwest
reqwest = {version = "0.11", features = ["json", "blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tiny_http = "0.11.0"
tungstenite = "0.17.1"
