[package]
name = "deconz-exporter"
description = "A very simple (and naive) Prometheus exporter for deCONZ Phoscon zigbee gateway"
edition = "2024"
rust-version = "1.85"
version = "0.1.0"
license = "MIT"
authors = ["Jaseem Abid <me@jabid.in>"]
readme = "README.md"
repository = "https://github.com/jaseemabid/deconz-exporter"


[dependencies]
chrono = {version = "0.4.30", features = ["serde"]}
clap = {version = "3.1.5", features = ["derive"]}
env_logger = "0.9"
lazy_static = "1.4.0"
log = "0.4"
prometheus = "0.13.0"
reqwest = {version = "0.11", features = ["json", "blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tiny_http = "0.11.0"
tungstenite = "0.17.1"
url = "2.2.2"
